<resources>
    <string name="app_name">EvtushenkoCRM</string>
    <string name="title_home">Главная</string>
    <string name="title_clients">Клиенты</string>

    <string name="title_calendar">Календарь</string>
    <string name="add_entry_title">Новый визит</string>

    <string name="title_more">Еще</string>


    <string name="add_client_title">Добавить клиента</string>
    <string name="add_client_name_hint">Имя</string>
    <string name="add_client_surname_hint">Фамилия</string>
    <string name="add_client_phone_hint">Телефон</string>
    <string name="add_client_phone_birthday">Дата рождения</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="ready">Готово</string>
</resources>