<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.evtushenko.crm.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <navigation
        android:id="@+id/navigation_clients"
        app:startDestination="@+id/navigation_clients_list">

        <fragment
            android:id="@+id/navigation_clients_list"
            android:name="com.evtushenko.crm.presentation.clients.ClientsFragment"
            android:label="@string/title_clients"
            tools:layout="@layout/fragment_clients">

            <action
                android:id="@+id/action_navigation_clients_to_add_client"
                app:destination="@+id/navigation_add_client" />
        </fragment>

        <fragment
            android:id="@+id/navigation_add_client"
            android:name="com.evtushenko.crm.presentation.clients.addclient.AddClientFragment"
            android:label="@string/add_client_title"
            tools:layout="@layout/fragment_add_client">
            <action
                android:id="@+id/action_navigation_add_client_pop"
                app:destination="@id/navigation_clients_list" />
        </fragment>
    </navigation>


    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.evtushenko.crm.presentation.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.evtushenko.crm.presentation.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_calendar" />


</navigation>